--- a/package.json
+++ b/package.json
@@ -1,15 +1,44 @@
 {
-	"name": "astro-template",
-	"type": "module",
-	"version": "0.0.1",
-	"scripts": {
-		"dev": "astro dev",
-		"start": "astro dev",
-		"build": "astro build",
-		"preview": "astro preview",
-		"astro": "astro"
-	},
-	"dependencies": {
-		"astro": "^2.0.11"
-	}
+  "name": "astro-template",
+  "type": "module",
+  "version": "0.0.1",
+  "scripts": {
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro",
+    "lint": "eslint \"**/*.{ts,tsx}\" --cache",
+    "lint-fix": "eslint \"**/*.{ts,tsx}\" --cache --fix",
+    "lint-ci": "eslint \"**/*.{ts,tsx}\" --cache --quiet",
+    "prettier": "prettier -w \"**/*.{ts,tsx,json,md,yml,css,scss}\"",
+    "prettier-ci": "prettier -c \"**/*.{ts,tsx,json,md.yml,css,scss}\"",
+    "prepare": "husky install"
+  },
+  "dependencies": {
+    "@astrojs/react": "^2.0.2",
+    "astro": "^2.0.11",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@astrojs/tailwind": "^3.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "@typescript-eslint/parser": "^5.52.0",
+    "eslint": "^8.34.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-astro": "^0.23.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "lint-staged": "^13.1.2",
+    "prettier": "^2.8.4",
+    "prettier-plugin-astro": "^0.8.0",
+    "sass": "^1.58.1",
+    "stylelint": "^15.1.0",
+    "stylelint-config-prettier-scss": "^0.0.1",
+    "stylelint-config-recess-order": "^3.1.0",
+    "stylelint-config-standard-scss": "^7.0.1",
+    "tailwindcss": "^3.2.6",
+    "husky": "^8.0.0"
+  }
 }
